feat: :wrench: Specify the base directory to resolve non-relative module names.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "ES2022",
       "dom"
     ],
+    "baseUrl": "src",
     "paths": {
       "@abstractions/*": ["app/abstractions/*"],
       "@api/*": ["app/api/*"],
