--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.10",
     "@ngrx/store": "^18.1.0",
+    "@storybook/addon-a11y": "^8.3.6",
+    "@storybook/addon-coverage": "^1.0.4",
+    "@storybook/test-runner": "^0.19.1",
+    "@testing-library/angular": "^17.3.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
