--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cozy-clothes-company",
   "version": "0.0.0",
   "scripts": {
+    "pre-install": "nvm use && nvm install",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
