--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cozy-clothes-company",
   "version": "0.0.0",
   "scripts": {
-    "pre-install": "nvm use && nvm install",
+    "pre-install": "nvm install 18.20 && nvm use",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
