feat: :fire: revoke the secret and rotate it

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve:ssr:cozy-clothes-company": "node dist/cozy-clothes-company/server/server.mjs",
     "storybook": "ng run cozy-clothes-company:storybook",
     "build-storybook": "ng run cozy-clothes-company:build-storybook",
-    "chromatic": "npx chromatic --project-token=chpt_6f36fe249971728"
+    "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "private": true,
   "dependencies": {
