--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,11 @@
-#node_modules
-#.git
-#.gitignore
-#*.md
-#dist
+node_modules
 .git
+.gitignore
+*.md
+dist
 .editorconfig
 /.vscode/*
 /node_modules
 /e2e
 /docs
-.gitignore
 *.zip
