--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve:ssr:cozy-clothes-company": "node dist/cozy-clothes-company/server/server.mjs",
     "storybook": "ng run cozy-clothes-company:storybook",
     "build-storybook": "ng run cozy-clothes-company:build-storybook",
-    "chromatic": "npx chromatic --project-token=chpt_6f36fe249971728",
+    "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN",
     "docker:build": "docker build -f Dockerfile -t ccc-ui .",
     "docker:run": "docker run --name ccc-ui-container -d -p 8000:80 ccc-ui:latest",
     "docker:all": "npm run docker:build; npm run docker:run"
